--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.3.4
   http: ^1.4.0
+  fl_chart: ^1.0.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
