--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,4 +25,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
+    - assets/sales.png
+    - assets/products.png
+    - assets/purchase.png
 
