--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dio: ^5.3.4
   http: ^1.4.0
   fl_chart: ^1.0.0
+  flutter_svg: ^2.0.7
   shared_preferences: ^2.5.3
 
 dev_dependencies:
