--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_svg: ^2.0.7
   shared_preferences: ^2.5.3
   syncfusion_flutter_charts: ^20.2.47
+  flutter_secure_storage: ^9.2.4
 
 
 dev_dependencies:
