--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ dependencies:
   shared_preferences: ^2.5.3
   syncfusion_flutter_charts: ^20.2.47
   flutter_secure_storage: ^9.2.4
-
+  google_fonts: ^6.3.0
+  
 
 dev_dependencies:
   flutter_test:
