--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   syncfusion_flutter_charts: ^20.2.47
   flutter_secure_storage: ^9.2.4
   google_fonts: ^6.3.0
+  connectivity_plus: ^6.1.5
   
 
 dev_dependencies:
