--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   http: ^1.4.0
   fl_chart: ^1.0.0
   flutter_svg: ^2.0.7
-  intl: ^0.19.0 # atau versi terbaru
+  intl: ^0.19.0
   shared_preferences: ^2.5.3
   syncfusion_flutter_charts: ^20.2.47
   flutter_secure_storage: ^9.2.4
