update ui type master data crud

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   google_fonts: ^6.3.0
   connectivity_plus: ^6.1.5
   logger: ^2.6.1
-  translator: ^1.0.4+1
+  pull_to_refresh: ^2.0.0 
   
 
 dev_dependencies:
