--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,14 @@ dependencies:
   syncfusion_flutter_charts: ^20.2.47
   flutter_secure_storage: ^9.2.4
   google_fonts: ^6.3.0
-  connectivity_plus: ^6.1.5
+  connectivity_plus: ^7.0.0
   logger: ^2.6.1
   pull_to_refresh: ^2.0.0
   shimmer: ^3.0.0
   equatable: ^2.0.5
+  internet_connection_checker: ^1.0.0+1
+  provider: ^6.1.5+1
+  url_launcher: ^6.3.2
 
 
 dev_dependencies:
