Refactor vendor management forms and add shimmer loading effects
- Updated KaryawanDropdownModel to use 'id_user' instead of 'id_karyawan'.
- Modified SalesTeamCreateModel to reflect changes in member ID mapping.
- Adjusted KaryawanDropdownModel in update models to align with new JSON structure.
- Enhanced SalesTeamUpdateModel to parse member IDs correctly.
- Improved ModulScreen by adding descriptive text for modules.
- Updated ModulCard to include a description parameter and display it.
- Added flutter_staggered_animations package for enhanced animations.
- Created inventory_widgets.dart with new UI components for inventory dashboard.
- Implemented PurchaseDashboardShimmer for loading state representation.
- Developed vendor creation steps with structured forms for general info, contact, and financial details.
- Introduced shimmer effects for vendor index and detail screens for better user experience.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   internet_connection_checker: ^1.0.0+1
   provider: ^6.1.5+1
   url_launcher: ^6.3.2
+  flutter_staggered_animations: ^1.1.1
 
 
 dev_dependencies:
