--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,8 @@ description: "A new Flutter project."
 publish_to: 'none'
 
 version: 1.0.0+1
-
 environment:
   sdk: ^3.8.1
-
 dependencies:
   flutter:
     sdk: flutter
@@ -29,13 +27,8 @@ dependencies:
   provider: ^6.1.5+1
   url_launcher: ^6.3.2
   flutter_staggered_animations: ^1.1.1
-
-
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_lints: ^5.0.0
-
 flutter:
   uses-material-design: true
   assets:
@@ -43,6 +36,5 @@ flutter:
     - assets/sales.png
     - assets/products.png
     - assets/purchase.png
-
-
+    - assets/human.png
  
